# sovereign-memory-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROVENANCE.md  PUBKEY.asc  README.de.md  README.es.md  README.md  README.ru.md  SECURITY.md  START-HERE.md  pyproject.toml
.github/workflows/: engine-invariants.yml
docs/: CASCADE.de.md  CASCADE.md  FOR-AI.de.md  FOR-AI.es.md  FOR-AI.md  FOR-AI.ru.md  GLOSSARY.md  HOST-COMPATIBILITY.md  INSTALL-NOTES.md  SETUP-PROMPT.de.md  SETUP-PROMPT.es.md  SETUP-PROMPT.md  SETUP-PROMPT.ru.md  architecture.md
engine/: INVENTORY.md  README.md  SYNC-PROCESS.md  _paths.py  _tg.py  _watch.py  daily_consolidate.py  esv_index.py  esv_query.py  esv_recall.py  esv_self_recall.py  esv_tier.py  experience_log.py  lint_memory.py  memory_pflege_audit.py  memory_sentry.py  native_language.py  rem_audit.py  rem_audit_nag.py  rem_consolidate.py  seed_gen.py  self_recall_beta.py  state_ledger_verify.py  trigger_audit.py  verify_pass.py  weekly_archive.py  weekly_consolidate.py
engine/tests/: test_native_language.py
integrations/open-webui/: recall_filter.py
spec/: engram.de.md  engram.es.md  engram.md  engram.ru.md  whitepaper.de.md  whitepaper.es.md  whitepaper.md  whitepaper.ru.md
templates/: README.md
templates/motoko/: current_state.md  identity.md  recent-moments.md  today_scratchpad.md  triggers.txt  triggers_self.txt
templates/motoko/memory/: CASCADE_TOPOLOGY.md
